--- a/Testing/Testing/Arithmetica.csproj
+++ b/Testing/Testing/Arithmetica.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
