--- a/Testing/Testing.Android/Testing.Android.csproj
+++ b/Testing/Testing.Android/Testing.Android.csproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="XLabs.Forms.Charting">
+      <Version>2.0.5782</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
